@@ -4,4 +4,6 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="termination_reason"/>
+    <field name="termination_reason"/>
 </form>
