@@ -2,4 +2,5 @@
 <tree string="Activation History">
     <field name="start_date"/>
     <field name="end_date"/>
+    <field name="termination_reason"/>
 </tree>
