@@ -2,4 +2,6 @@
 <form string="Select End Date">
     <label name="end_date"/>
     <field name="end_date"/>
+    <label name="termination_reason"/>
+    <field name="termination_reason"/>
 </form>
