@@ -1,5 +1,7 @@
 * Add relate to event logs from contract if the module is installed
 
+* Allow to pre-set termination reason
+
 Version 1.3 - 2015-01-22
 * Centralize calculate method
 * Add automatic calculation of end_dates
